--- a/html/index.html
+++ b/html/index.html
@@ -42,10 +42,11 @@
 						<p>Szukaj wydarzeń, zgłębiaj techniki, poznawaj siebie.</p>
 						<p></p>
 						<p>Zostaw swój adres email - powiadomimy Cię gdy nasza platforma będzie gotowa.</p>
-						<div class="btn-wrap">
-							<a href="#" class="btn-border">TWÓj E-MAIL</a>
-							<a href="#" class="btn-bg">POWIADOM MNIE <img src="img/icon-1.svg" alt=""></a>
-						</div>
+						<form action="#" class="btn-wrap form-submit">
+							<label for="email"></label>
+							<input type="email" name="email" id="email" placeholder="TWÓj E-MAIL">
+							<button type="submit" class="btn-bg">POWIADOM MNIE <img src="img/icon-1.svg" alt=""></button>
+						</form>
 					</div>
 
 				</div>
@@ -111,10 +112,11 @@
 						świat wellbeingu
 						w jednym miejscu!</h2>
 					<h6>Dołącz do grona mi harmoni</h6>
-					<div class="btn-wrap">
-						<a href="#" class="btn-border">TWÓj E-MAIL</a>
-						<a href="#" class="btn-bg">POWIADOM MNIE <img src="img/icon-1.svg" alt=""></a>
-					</div>
+					<form action="#" class="btn-wrap form-submit">
+						<label for="email"></label>
+						<input type="email" name="email" id="email" placeholder="TWÓj E-MAIL">
+						<button type="submit" class="btn-bg">POWIADOM MNIE <img src="img/icon-1.svg" alt=""></button>
+					</form>
 				</div>
 			</div>
 		</section>
