--- a/html/index.html
+++ b/html/index.html
@@ -95,8 +95,28 @@
 
 
 					</div>
-					<figure>
-						<img src="img/img-4.png" alt="">
+					<figure class="img-6x">
+						<img src="img/img-5-1.jpg" alt="">
+						<img src="img/img-5-2.jpg" alt="">
+						<img src="img/img-5-3.jpg" alt="">
+						<img src="img/img-5-4.jpg" alt="">
+						<img src="img/img-5-5.jpg" alt="">
+						<img src="img/img-5-6.jpg" alt="">
+					</figure>
+				</div>
+				<div class="item item-3">
+					<div class="text">
+						<h3>Odkrywaj <br>
+							nowe techniki</h3>
+						<p>	W <b>mi harmoni</b> czeka na Ciebie ponad 50 technik z obszaru wellbeing: metody relaksacyjne, praca z emocjami i energią, ćwiczenia oddechowe, praktyki medytacyjne oraz wiele innych.</p>
+						<p>Odkryj różnorodne sposoby na redukcję stresu i napięć oraz walkę z uciążliwymi dolegliwościami.</p>
+						<p>Dowiedz się wszystkiego o harmonii ciała, umysłu, i emocji - poznaj nowe możliwości praktyk.</p>
+
+
+					</div>
+					<figure class="no-border">
+						<img src="img/img-6.png" alt="">
+
 					</figure>
 				</div>
 			</div>
@@ -113,8 +133,8 @@
 						w jednym miejscu!</h2>
 					<h6>Dołącz do grona mi harmoni</h6>
 					<form action="#" class="btn-wrap form-submit">
-						<label for="email"></label>
-						<input type="email" name="email" id="email" placeholder="TWÓj E-MAIL">
+						<label for="email1"></label>
+						<input type="email" name="email" id="email1" placeholder="TWÓj E-MAIL">
 						<button type="submit" class="btn-bg">POWIADOM MNIE <img src="img/icon-1.svg" alt=""></button>
 					</form>
 				</div>
