--- a/html/_index.html
+++ b/html/_index.html
@@ -44,7 +44,9 @@
         }
     </style></head>
     <body><h2>Content:</h2><ol>
-        <li><a href="index.html">Главная</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="thank.html">Thank you page</a></li>
+
         <li><a href="card.html">Карточка товара</a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="price.html">Цены</a></li>
